todos-api/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todos-api
  namespace: team16
spec:
  ports:
    - port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    app: todos-api
